[package]
name = "Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27"
anyhow = "1.0"
env_logger = "0.9"
log = "0.4"
wgpu = "0.14"
pollster = "0.2"
bytemuck = {version = "1.4", features = ["derive"]}
cgmath = "0.18.0"
[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
